[gd_scene load_steps=6 format=3 uid="uid://cw1h2xsx4bw0i"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_v2ky4"]
[ext_resource type="PackedScene" uid="uid://cug25e425ovsl" path="res://scenes/components/health_component.tscn" id="1_v8cyx"]
[ext_resource type="Texture2D" uid="uid://dqf1wfvmctqoi" path="res://sprites/enemies/urchin.png" id="3_6r5cx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bhtjw"]
radius = 31.1448

[sub_resource type="CircleShape2D" id="CircleShape2D_vb1tc"]
radius = 399.452

[node name="Enemy" type="Area2D"]
scale = Vector2(2, 2)
collision_layer = 2
script = ExtResource("1_v2ky4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bhtjw")

[node name="HealthComponent" parent="." instance=ExtResource("1_v8cyx")]
max_health = 6

[node name="Agro" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Agro"]
shape = SubResource("CircleShape2D_vb1tc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_6r5cx")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="died" from="HealthComponent" to="." method="_on_death"]
[connection signal="area_entered" from="Agro" to="." method="_on_agro_entered"]
[connection signal="area_exited" from="Agro" to="." method="_on_agro_exited"]
